syntax = "proto3";

import  "google/protobuf/empty.proto";

package handler;

option go_package = "/handler/grpc";

service TournamentService {
	rpc SaveUser(User) returns (SaveResponse) {}
	rpc GetUserByID(UserRequest) returns (User) {}
	rpc DeleteUserByID(UserRequest) returns (google.protobuf.Empty) {}
	rpc SumToBalance(RequestToUpdateBalance) returns (google.protobuf.Empty) {}
	rpc UserAuthorization(AuthorizationRequest) returns (AuthorizationResponse) {}

	rpc CreateTournament(CreateTournamentRequest) returns (CreateTournamentResponse) {} 
	rpc GetTournamentByID(TournamentRequest) returns (Tournament) {} 
	rpc JoinTournament(JoinRequest) returns (google.protobuf.Empty) {}
	rpc FinishTournament(TournamentRequest) returns (google.protobuf.Empty) {}
	rpc CancelTournament(TournamentRequest) returns (google.protobuf.Empty) {}
}

message User {
    string ID = 1;
    string Name = 2;
    double Balance = 3;
}

message SaveResponse {
    string id = 1;
	string password = 2;
}

message UserRequest {
    string ID = 1;
}

message RequestToUpdateBalance {
    string ID = 1;
    double addend = 2;
}

message AuthorizationRequest {
	string username = 1;
	string password = 2;
}

message AuthorizationResponse {
	string id = 1;
}

message CreateTournamentRequest {
	string name = 1;
	double deposit = 2;
}

message CreateTournamentResponse {
	string id = 1;
}

message TournamentRequest {
	string id = 1;
}

message Tournament {
	string id = 1;
	string name = 2;
	double deposit = 3;
	double prize = 4;
	repeated string users = 5;
	string winner = 6;
	string status = 7;
}

message JoinRequest {
	string tournamentID = 1;
	string userID = 2;
}
